# sales-data-platform

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
dags/: sales_pipeline.py
sales_pipeline/: __init__.py  __main__.py  cli.py  clickhouse.py  config.py  postgres.py
sample_data/: README.md  bills_head.csv  bills_item.csv  coupons.csv  promo_types.csv  promos.csv  stores.csv  traffic.csv
sql/greenplum/: 001_schema.sql
sql/marts/: store_performance.sql
sql/postgres/: 001_schema.sql
tests/: test_config.py  test_mart.py
