[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sales-data-platform"
version = "1.0.0"
description = "Retail sales mart pipeline for PostgreSQL/Greenplum and ClickHouse"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Alim Narmamatov" }]
dependencies = [
  "clickhouse-connect>=0.8,<1",
  "psycopg[binary]>=3.2,<4",
]

[project.optional-dependencies]
dev = ["duckdb>=1.2,<2", "pytest>=8,<10", "ruff>=0.9,<1"]

[tool.setuptools.packages.find]
include = ["sales_pipeline*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
